crates/analyzer/tests/snapshots/errors__invalid_struct_field.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: No field `foo` exists on struct `Bar`
  ┌─ compile_errors/invalid_struct_field.fe:9:18
  │
9 │         self.val.foo
  │                  ^^^ undefined field


